--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^17.3.10",
     "@angular/router": "^17.3.10",
     "@ngxs/logger-plugin": "^3.8.2",
+    "@ngxs/storage-plugin": "^3.8.2",
     "@ngxs/store": "^3.8.2",
     "@rx-angular/template": "^17.3.1",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
